extract value and env variable separately

--- a/.env
+++ b/.env
@@ -9,6 +9,11 @@
 NODE_ENV=production
 # [@type=something]
 # [@docs=https://somedocs.com]
-# [@default=value]
 # Something else
 ANOTHER_LINE=development
+# [@responsible=DevOps]
+# [@secret=no]
+# [@policy=mantain]
+# [@type=permanent]
+# This configures the magento URL lorem ipsum signum
+MAGENTO_BACKEND_URL=development
