chore: optimize release build performance

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,10 @@
+[profile.release]
+codegen-units = 1
+lto = "fat"
+opt-level = "s"
+panic = "abort"
+strip = "symbols"
+
 [package]
 name = "prometheus"
 version = "0.1.0"
