chore: test ci/cd

--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ NODE_ENV=production
 ANOTHER_LINE=development
 
 # [@responsible=DevOps]
-# [@secret=no]
+# [@secret=yes]
 # [@policy=mantain]
 # [@type=permanent]
 # This configures the magento URL lorem ipsum signum
