--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -3,7 +3,7 @@ name: Create Release Branch
 on:
   push:
     tags:
-      - "*"
+      - "v[0-9]+.[0-9]+.[0-9]+"
 
 defaults:
   run:
@@ -12,7 +12,7 @@ defaults:
 jobs:
   create-release-branch:
     runs-on: ubuntu-latest
-    if: startsWith(github.event.ref, 'refs/tags/') && github.event.release.prerelease == true && github.event.release.draft == false
+    if: github.event.release.prerelease == true
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -32,7 +32,7 @@ jobs:
       - name: Update Cargo.toml version
         run: |
           # Extract the version number from the tag
-          version=${GITHUB_REF#refs/tags/}
+          version=${GITHUB_REF#refs/tags/v}
           # Update the Cargo.toml version using sed (or an alternative method if you prefer)
           sed -i "s/^version = \".*\"$/version = \"$version\"/" Cargo.toml
           # Update lockfile
@@ -41,7 +41,7 @@ jobs:
       - name: Commit changes
         run: |
           git add Cargo.toml Cargo.lock
-          git commit -m "Update Cargo.toml version to ${{ github.event.ref#refs/tags/ }}"
+          git commit -m "Update Cargo.toml version to ${{ github.event.ref#refs/tags/v }}"
 
       - name: Push the new branch
         run: git push origin ${{ steps.branch_name.outputs.branch_name }}
