--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     tags:
-      - "*"
+      - "v[0-9]+.[0-9]+.[0-9]+"
 
 defaults:
   run:
@@ -11,7 +11,7 @@ defaults:
 
 jobs:
   release:
-    if: startsWith(github.event.ref, 'refs/tags/') && github.event.release.prerelease == false && github.event.release.draft == false
+    if: github.event.release.prerelease == false
     strategy:
       matrix:
         target:
@@ -86,7 +86,7 @@ jobs:
 
       - name: Publish Archive
         uses: softprops/action-gh-release@v2.0.8
-        if: ${{ startsWith(github.ref, 'refs/tags/') }}
+        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         with:
           draft: false
           files: ${{ steps.package.outputs.archive }}
@@ -98,7 +98,7 @@ jobs:
         uses: softprops/action-gh-release@v2.0.8
         if: >-
           ${{
-            startsWith(github.ref, 'refs/tags/')
+            startsWith(github.ref, 'refs/tags/v')
             && matrix.target == 'x86_64-unknown-linux-musl'
           }}
         with:
