--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,7 +11,8 @@ defaults:
 
 jobs:
   release:
-    if: github.event.release.prerelease == false
+    if: ${{!github.event.release.prerelease}}
+
     strategy:
       matrix:
         target:
