--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -62,5 +62,4 @@ jobs:
             --title "Release ${VERSION}" \
             --body "This PR updates the version in Cargo.toml to ${VERSION}." \
             --base main \
-            --head ${{ steps.branch_name.outputs.branch_name }} \
-            --delete-branch
+            --head ${{ steps.branch_name.outputs.branch_name }}
