--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -11,8 +11,6 @@ defaults:
 jobs:
   create-release-branch:
     runs-on: ubuntu-latest
-    env:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -44,22 +42,16 @@ jobs:
           # Update lockfile
           cargo generate-lockfile
 
-      - name: Commit changes
-        run: |
-          git add Cargo.toml Cargo.lock
-          git commit -m "Update Cargo.toml version to ${VERSION}"
-
-      - name: Push the new branch
-        run: git push origin ${{ steps.branch_name.outputs.branch_name }}
-
-      - name: Install GitHub CLI
-        run: |
-          sudo apt-get install gh
-
-      - name: Create Pull Request
-        run: |
-          gh pr create \
-            --title "Release ${VERSION}" \
-            --body "This PR updates the version in Cargo.toml to ${VERSION}." \
-            --base main \
-            --head ${{ steps.branch_name.outputs.branch_name }}
+      - name: Create PR
+        uses: peter-evans/create-pull-request@v6
+        with:
+          add-paths: |
+            Cargo.toml
+            Cargo.lock
+          branch: ${{ steps.branch_name.outputs.branch_name }}
+          delete-branch: true
+          commit-message: "Update Cargo.toml version to ${VERSION}"
+          base: "main"
+          title: "Release ${VERSION}"
+          body: |
+            Preparing next release. This PR has been auto-generated.
